@@ -1,3 +1,8 @@
+2008-03-10  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
+
+	* jhbuild/versioncontrol/git.py: fix git-svn and git-cvsimport
+	for recent versions of git (git-stash usage has changed).
+
 2008-03-08  Luca Ferretti  <elle.uca@libero.it>
 
 	* modulesets/gnome-2.22.modules:
